--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script type="module" src="/index.js"></script>
-    <script type="module" src="/tinytest.js"></script>
-    <script type="module" src="/test.js"></script>
+    <!-- <script type="module" src="/tinytest.js"></script>
+    <script type="module" src="/test.js"></script> -->
   </body>
 </html>
